--- a/composer.json
+++ b/composer.json
@@ -35,10 +35,12 @@
         "symfony/runtime": "7.3.*",
         "symfony/security-bundle": "7.3.*",
         "symfony/serializer": "7.3.*",
-        "symfony/stimulus-bundle": "^2.19",
+        "symfony/stimulus-bundle": "^2.31",
         "symfony/string": "7.3.*",
         "symfony/translation": "7.3.*",
         "symfony/twig-bundle": "7.3.*",
+        "symfony/ux-autocomplete": "^2.31",
+        "symfony/ux-live-component": "^2.31",
         "symfony/ux-turbo": "^2.19",
         "symfony/validator": "7.3.*",
         "symfony/web-link": "7.3.*",
