--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
     "webpack": "^5.102.1",
     "webpack-cli": "^6.0.1",
     "webpack-notifier": "^1.15.0"
+  },
+  "dependencies": {
+    "@hotwired/stimulus": "^3.2.2",
+    "stimulus-autocomplete": "^3.1.0"
   }
 }
